--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styl  e.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
 </head>
@@ -16,8 +16,8 @@
             <div class="row">
               <div id="players-div" class="col">
                 <h1>Players</h1>
-                <input id="search-box" class="form-control mr-sm-2  w-50" type="search" placeholder="Search" aria-label="Search">
-                <button onclick="allPlayers()" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> <br> <br>
+                <input id="search-box" class="form-control ms-5 mr-sm-2  w-75 mb-3 mt-3" type="search" placeholder="Search" aria-label="Search">
+                <button onclick="allPlayers()" class="btn btn-outline-success text-black  my-2 my-sm-0" type="submit">Search</button> <br> <br>
               </div>
               <div id="player-details" class="col">
                 <h1>Player Details</h1>
