--- a/index.html
+++ b/index.html
@@ -10,20 +10,27 @@
     
 </head>
 <body>
-    <h1 class="text-center">Search Your favourite Players</h1>
+    <h1 class="text-center my-3 p-3 bg-info">Search Your favourite Players</h1>
     <section>
         <div class="container">
             <div class="row">
               <div id="players-div" class="col">
                 <h1>Players</h1>
-                <input id="search-box" class="form-control ms-5 mr-sm-2  w-75 mb-3 mt-3" type="search" placeholder="Search" aria-label="Search">
-                <button onclick="allPlayers()" class="btn btn-outline-success text-black  my-2 my-sm-0" type="submit">Search</button> <br> <br>
+                <input id="search-box" class="form-control ms-5 mr-sm-2  w-75 mb-3 mt-3" type="search" placeholder="Search your favourite Player" aria-label="Search">
+                <button onclick="allPlayers()" class="btn btn-outline-success text-black my-2 my-sm-0" type="submit">Search</button> <br>
+                <img id="spinner" src="images/gif.gif" class="mt-3 w-50  " alt="">
+                <br> <br>
               </div>
+           
+
               <div id="player-details" class="col">
                 <h1>Player Details</h1>
               </div>
             </div>
           </div>
+    </section>
+    <section>
+      <h1 id="alert-msg" class="d-none">Sorry, type something</h1>
     </section>
 
 
